--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,88 @@
 body {
-  background-color: bisque;
+  background-color: #eeeeee;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
+.container {
+  background: #ffffff;
+  color: #000000;
+  max-width: 600px;
+  display: block;
+  margin: 15px auto;
+  padding: 20px;
+  border-radius: 90px;
+  height: 500px;
+
+  font-family: "Quicksand", sans-serif;
+
+  box-shadow: rgba(196, 190, 252, 0.4) 5px 5px,
+    rgba(173, 218, 250, 0.3) 10px 10px, rgba(173, 242, 246, 0.2) 15px 15px,
+    rgba(185, 250, 228, 0.1) 20px 20px, rgba(202, 248, 208, 0.05) 25px 25px;
+}
+
+select {
+  width: 80%;
+  display: block;
+  margin: 10px auto;
+  padding: 20px;
+  font-size: 22px;
+  background: linear-gradient(
+    102.7deg,
+    rgb(253, 218, 255) 8.2%,
+    rgb(223, 173, 252) 19.6%,
+    rgb(173, 205, 252) 36.8%,
+    rgb(173, 252, 244) 73.2%,
+    rgb(202, 248, 208) 90.9%
+  );
+  color: #2d2d2d;
+  border-radius: 30px;
+}
+
 h1 {
+  font-size: 40px;
+  color: #000000;
   text-align: center;
 }
+h2 {
+  margin: 0 0 5px;
+  font-family: "Finger Paint", cursive;
+}
+
+.cities {
+}
+
+.city {
+  font-size: 18px;
+  color: #ff385c;
+  padding: 20px;
+  border-bottom: 2px dashed #2d2d2d58;
+  display: flex;
+  justify-content: space-between;
+}
+
+.city:last-child {
+  border: none;
+}
+.time {
+  font-size: 32px;
+  color: #ff385c;
+}
+
+.date {
+  font-size: 15px;
+  color: #000000;
+  opacity: 0.7;
+}
+
 footer {
   text-align: center;
+  margin: 20px;
+  color: #2d2d2d75;
+  height: 100px;
+}
+
+a {
+  font-weight: bolder;
+  color: #2d2d2db5;
+  text-decoration: none;
 }
