--- a/css/style.css
+++ b/css/style.css
@@ -77,15 +77,21 @@ h2 {
   opacity: 0.7;
 }
 
+a {
+  font-weight: bolder;
+  color: #2d2d2db5;
+  text-decoration: none;
+}
+
+#all-city {
+  display: block;
+  text-align: center;
+  text-decoration: underline;
+}
+
 footer {
   text-align: center;
   margin: 20px;
   color: #2d2d2d75;
   height: 100px;
-}
-
-a {
-  font-weight: bolder;
-  color: #2d2d2db5;
-  text-decoration: none;
 }
